@@ -6,8 +6,12 @@
    <script:event script:event-name="on-itemstatechange" script:macro-name="vnd.sun.star.UNO:CustomTemplateChange" script:language="UNO"/>
   </dlg:checkbox>
   <dlg:textfield dlg:id="Template" dlg:tab-index="1" dlg:left="18" dlg:top="22" dlg:width="232" dlg:height="96" dlg:hscroll="true" dlg:vscroll="true" dlg:multiline="true"/>
-  <dlg:button dlg:id="Load" dlg:tab-index="2" dlg:left="18" dlg:top="120" dlg:width="60" dlg:height="12" dlg:value="Load..."/>
-  <dlg:button dlg:id="Test" dlg:tab-index="3" dlg:left="190" dlg:top="120" dlg:width="60" dlg:height="12" dlg:value="Test"/>
+  <dlg:button dlg:id="Load" dlg:tab-index="2" dlg:left="18" dlg:top="120" dlg:width="60" dlg:height="12" dlg:value="Load...">
+   <script:event script:event-name="on-keyup" script:macro-name="vnd.sun.star.UNO:LoadClick" script:language="UNO"/>
+  </dlg:button>
+  <dlg:button dlg:id="Test" dlg:tab-index="3" dlg:left="190" dlg:top="120" dlg:width="60" dlg:height="12" dlg:value="Test">
+   <script:event script:event-name="on-keyup" script:macro-name="vnd.sun.star.UNO:TestClick" script:language="UNO"/>
+  </dlg:button>
   <dlg:text dlg:id="ContentIdLabel" dlg:tab-index="4" dlg:left="18" dlg:top="140" dlg:width="50" dlg:height="12" dlg:value="Content id"/>
   <dlg:combobox dlg:id="ContentId" dlg:tab-index="5" dlg:left="72" dlg:top="138" dlg:width="50" dlg:height="12" dlg:spin="true">
    <dlg:menupopup>
