@@ -6,4 +6,6 @@
  <library:element library:name="Template"/>
  <library:element library:name="Formatting"/>
  <library:element library:name="StylesPartI"/>
+ <library:element library:name="StylesPartII"/>
+ <library:element library:name="Content"/>
 </library:library>
